@@ -9,6 +9,10 @@ From v1.0.0 and on, the project will adherence strictly to Semantic Versioning.
 
 ## [Unreleased]
 
+### Changed
+- SPLoRA behavior to enforce weight.requires_grad = False instead of assertion
+
+
 ## [0.5.1] - 2022-10-20
 ### Added
 - Add init_range to LowRankMatrix
